[build-system]
requires = ["scikit-build-core>=0.4.3", "pybind11>=2.11.1"]
build-backend = "scikit_build_core.build"

[project]
name = "radiation"
version = "0.1.0"
description = "Your pybind11 extension module"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
]

[tool.scikit-build]
wheel.packages = []
cmake.version = ">=3.18"
cmake.source-dir = "."
